--- a/Garage HEPL/nbproject/project.properties
+++ b/Garage HEPL/nbproject/project.properties
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=AppGarageHEPL.ConsoleApp
+main.class=GUI.login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
