--- a/librairieMyVariousUtils/nbproject/private/private.properties
+++ b/librairieMyVariousUtils/nbproject/private/private.properties
@@ -1,7 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.BasicStringNetworkLib.jar=/home/student/Bureau/BasicStringNetworkLib.jar
 javac.debug=true
 javadoc.preview=true
-project.librairieMyVariousUtils=/home/student/Bureau/java_labo_2021-2022/librairieMyVariousUtils
 user.properties.file=/home/student/.netbeans/8.2/build.properties
