--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Compiled class file
 *.class
 
-/build/
-/Logs/
+*/build/
+*/Logs/
 
 # Log file
 *.log
@@ -14,21 +14,4 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
 *.ser
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-/Garage HEPL/dist/
-/Application Gestion/nbproject/private/
-/ApplicationCentrale/nbproject/private/
-/ApplicationCentrale/build/
-/Application Gestion/build/
-/ApplicationCentrale/dist/
-/Application Gestion/dist/
