--- a/Application Gestion/nbproject/private/private.properties
+++ b/Application Gestion/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.BasicStringNetworkLib.jar=/home/student/Bureau/java_labo_2021-2022/BasicStringNetworkLib.jar
 javac.debug=true
 javadoc.preview=true
 project.librairieMyVariousUtils=/home/student/Bureau/java_labo_2021-2022/librairieMyVariousUtils
