:tada: Version Final 1.1

--- a/Application Gestion/Config.properties
+++ b/Application Gestion/Config.properties
@@ -10,6 +10,8 @@ Port_Serveur_CommandesPi\u00e8ces=50501
 Ip_Serveur_CommandesPneux=127.0.0.1
 Port_Serveur_CommandesPneux=50502
 
+FileName=SavedEnvironment
+
 
 
 
